unpackaged/main/default/objects/nbavs__Skill__c/nbavs__Skill__c.object-meta.xml
<CustomObject>
    <label>Skill</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>