unpackaged/main/default/objects/nbavs__Skill__c/fields/nbavs__Description__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>