unpackaged/main/default/objects/nbavs__Skill__c/fields/nbavs__Weight__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Weight__c</fullName>
    <formula>CASE(nbavs__Weight_Preset__c, &#39;Custom&#39;, nbavs__Weight_Custom__c, &#39;No knowledge&#39;, 0, &#39;Minimal&#39;, 1, &#39;Basic&#39;, 10, &#39;Novice&#39;, 20, &#39;Intermediate&#39;, 40, &#39;Advanced&#39;, 60, &#39;Expert&#39;, 80, &#39;Guru&#39;, 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proficiency Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>