unpackaged/main/default/objects/nbavs__Skill__c/fields/nbavs__Weight_Custom__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Weight_Custom__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Proficiency Custom</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>