unpackaged/main/default/objects/nbavs__Skill__c/fields/nbavs__Weight_Preset__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Weight_Preset__c</fullName>
    <defaultValue>&quot;No knowledge&quot;</defaultValue>
    <label>Proficiency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No knowledge</fullName>
                <default>true</default>
                <label>No knowledge</label>
            </value>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Guru</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>